feat(icofr): implement comprehensive ICORF refinements (POJK 15/2024)
- Add Change Management Log (Appendix 6)
- Implement Finding Aggregation and Deficiency Classification
- Enhance Testing module with TOD/TOE workflows
- Update Materiality with Haircut Logic
- Add ERP Population Pull wizard and Sampling tools
- Update views, menus, and security rules

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - ./addons:/mnt/extra-addons
       - ./odoo.conf:/etc/odoo/odoo.conf
     restart: unless-stopped
+    # command: odoo -u icofr
     # command: odoo -d odoo
 
 volumes:
