feat: full alignment with SK BUMN 2024 (SK-5/DKU.MBU/11/2024)
- Control & Risk: Added ITGC Areas (Table 1), EUC Complexity (Table 14), IPE Types (Table 15), and MRC Precision. Implemented Information Processing Objectives (IPO: C, A, V, RA) per Table 13.
- Risk Matrix: Updated risk rating logic to automatically combine Quantitative and Qualitative factors per Table 12.
- Sampling Engine: Automated sample size calculation for TOE (Table 22) and Remediation (Table 23) based on frequency and risk.
- Scoping & Materiality: Implemented Scoping Coverage Analysis (2/3 Rule per Table 6) and automated Group Materiality Multiplier (Table 25).
- Documentation: Added Testing Attributes A, B, C, D to testing logs (Appendix 7) and DoD Working Paper checklist Box 1-7 to findings (Appendix 10).
- Reporting: Updated certification report with formal management statement verbiage and deficiency tables per Appendix 11.
- New Features: Added Whistleblowing System (WBS) module for fraud reporting (COSO Principle 14).
- Security & UI: Refined ir.model.access.csv for all new models and improved UI labels for account mapping.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,7 @@ services:
       - ./addons:/mnt/extra-addons
       - ./odoo.conf:/etc/odoo/odoo.conf
     restart: unless-stopped
-    # command: odoo -u icofr
-    # command: odoo -d odoo
+    command: odoo -u icofr -d odoo
 
 volumes:
   odoo_db_data:
