feat: implement enhanced compliance features and banking sector support
Key additions following Juknis BUMN SK-5/DKU.MBU/11/2024:
- Banking Industry Support: Added specialized demo data, business processes (Credit, Treasury, AML), and risk frameworks for the financial sector (Lampiran 2).
- Service Organization Monitoring: New models for third-party vendor management and SOC 1/2 Type II report tracking (Bab III Pasal 4.3).
- Specialist Involvement: Added attributes to evaluate credibility, assumptions, and fairness justification for controls involving experts (Bab III Pasal 2.2.b.4).
- Remediation Sampling: Implemented Table 23 sampling logic for post-fix testing with specific observation periods.
- CSA 'No Transaction' Support: Added explicit handling for controls with no activity during assessment periods (Bab IV Pasal 2.1.c).
- Aggregated Deficiency Evaluation: Enhanced grouping mechanism based on Account, COSO Principle, or Process to assess collective impact (Bab VII Pasal 1.1.g).
- Interactive FAQ: Integrated 14-point implementation guide from Lampiran 12 into the Utility menu.
- Documentation: Fully updated READMEs and GEMINI.md with comprehensive usage guides and role definitions.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - ./addons:/mnt/extra-addons
       - ./odoo.conf:/etc/odoo/odoo.conf
     restart: unless-stopped
-    command: odoo -u icofr -d odoo
+    command: odoo -u icofr,icofr_demo -d odoo
 
 volumes:
   odoo_db_data:
